// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`report snapshots > formats SARIF context fields 1`] = `
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "level": "warning",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "hardware/main.kicad_pro",
                },
                "region": {
                  "startColumn": 1,
                  "startLine": 1,
                },
              },
            },
          ],
          "message": {
            "text": "Project has no board file.",
          },
          "partialFingerprints": {
            "primaryLocationLineHash": "2622cd3f11de3652f7d30a00a54de144df4d238b8ab914098e4b966c65f2002e",
          },
          "properties": {
            "fingerprint": "2622cd3f11de3652f7d30a00a54de144df4d238b8ab914098e4b966c65f2002e",
            "help": "See the BoardReadyOps rule documentation for remediation guidance.",
            "reportLocation": "hardware/main.kicad_pro",
            "resourceKind": "project",
            "severity": "medium",
            "stableId": "2622cd3f11de",
          },
          "ruleId": "manifest.project-discovery",
        },
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "hardware/bom.csv",
                },
                "region": {
                  "startColumn": 2,
                  "startLine": 7,
                },
              },
            },
          ],
          "message": {
            "text": "R1 is missing an MPN.",
          },
          "partialFingerprints": {
            "primaryLocationLineHash": "871c3384981ed78c8be1f4ab3b584eafa3fe6a430c8840a389d1269ee7d4b88f",
          },
          "properties": {
            "fingerprint": "871c3384981ed78c8be1f4ab3b584eafa3fe6a430c8840a389d1269ee7d4b88f",
            "help": "See the BoardReadyOps rule documentation for remediation guidance.",
            "reportLocation": "hardware/bom.csv:7:2",
            "resourceKind": "bom",
            "severity": "high",
            "stableId": "871c3384981e",
          },
          "ruleId": "bom.missing-mpn",
        },
        {
          "level": "error",
          "locations": [
            {
              "logicalLocations": [
                {
                  "fullyQualifiedName": "pcb:Edge.Cuts:14.2mm,8.7mm",
                  "kind": "member",
                  "name": "Edge.Cuts @ (14.2mm, 8.7mm)",
                },
              ],
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "hardware/main.kicad_pcb",
                },
                "region": {
                  "endColumn": 12,
                  "endLine": 44,
                  "startColumn": 3,
                  "startLine": 42,
                },
              },
            },
          ],
          "message": {
            "text": "Board outline has a gap.",
          },
          "partialFingerprints": {
            "primaryLocationLineHash": "7fc3f247eb79f0789e9f8f66669a22636b081b4d4efab469e8fac07ada628b82",
          },
          "properties": {
            "confidence": "definite",
            "fingerprint": "7fc3f247eb79f0789e9f8f66669a22636b081b4d4efab469e8fac07ada628b82",
            "fix": {
              "description": "Close the outline segment.",
              "steps": [
                "Open Edge.Cuts.",
                "Connect the adjacent outline endpoints.",
              ],
            },
            "help": "Close the outline segment.",
            "project": "hardware/main.kicad_pro",
            "reportLocation": "hardware/main.kicad_pcb:42:3-44",
            "resourceKind": "pcb",
            "severity": "critical",
            "stableId": "7fc3f247eb79",
          },
          "ruleId": "design.board-outline",
        },
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/oaslananka/boardreadyops",
          "name": "BoardReadyOps",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "warning",
              },
              "fullDescription": {
                "text": "Project has no board file.",
              },
              "helpUri": "https://github.com/oaslananka/boardreadyops/tree/main/docs/rules",
              "id": "manifest.project-discovery",
              "name": "manifest.project-discovery",
              "shortDescription": {
                "text": "manifest.project-discovery",
              },
            },
            {
              "defaultConfiguration": {
                "level": "error",
              },
              "fullDescription": {
                "text": "R1 is missing an MPN.",
              },
              "helpUri": "https://github.com/oaslananka/boardreadyops/tree/main/docs/rules",
              "id": "bom.missing-mpn",
              "name": "bom.missing-mpn",
              "shortDescription": {
                "text": "bom.missing-mpn",
              },
            },
            {
              "defaultConfiguration": {
                "level": "error",
              },
              "fullDescription": {
                "text": "Board outline has a gap.",
              },
              "help": {
                "markdown": "Close the outline segment.
1. Open Edge.Cuts.
2. Connect the adjacent outline endpoints.",
                "text": "Close the outline segment.
1. Open Edge.Cuts.
2. Connect the adjacent outline endpoints.",
              },
              "helpUri": "https://github.com/oaslananka/boardreadyops/tree/main/docs/rules",
              "id": "design.board-outline",
              "name": "design.board-outline",
              "shortDescription": {
                "text": "design.board-outline",
              },
            },
          ],
          "version": "0.9.0",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;

exports[`report snapshots > formats fabrication diff Markdown 1`] = `
"<!-- boardreadyops:sticky:v1 -->
# BoardReadyOps Report

| Metric | Count |
| --- | ---: |
| Total | 1 |
| Critical | 0 |
| High | 1 |
| Medium | 0 |
| Low | 0 |
| Info | 0 |

## Top Findings

- **high** \`bom.missing-mpn\` in \`bom.csv:2:1\` (\`6b8bae8b505e\`): R1 is missing an MPN.

## Fabrication Changes

### BOM
| Ref | Previous | Current | Status |
| --- | --- | --- | --- |
| D2 | LED red | - | removed |
| R1 | - | 10k 0402 | added |

### Manufacturing Outputs
- drill: changed (1 changed)

### New Findings
- **high** \`bom.missing-mpn\` in \`\` (\`\`): R1 is missing an MPN.

"
`;

exports[`report snapshots > formats stable JSON 1`] = `
{
  "fabrication": {
    "bom": [],
    "outputs": [],
  },
  "findings": [
    {
      "details": {
        "reference": "R1",
      },
      "fingerprint": "6b8bae8b505e9461a9c3b8df7fb0e0f7daa70750a14eb6fd1c74144431e31b8f",
      "location": {
        "column": 1,
        "line": 2,
      },
      "message": "R1 is missing an MPN.",
      "resource": {
        "kind": "bom",
        "path": "bom.csv",
      },
      "ruleId": "bom.missing-mpn",
      "severity": "high",
    },
  ],
  "generatedAt": "2026-05-18T00:00:00.000Z",
  "projects": [],
  "schemaVersion": 1,
  "summary": {
    "critical": 0,
    "failed": true,
    "high": 1,
    "info": 0,
    "low": 0,
    "maxSeverity": "high",
    "medium": 0,
    "total": 1,
  },
  "tool": {
    "name": "boardreadyops",
    "version": "0.9.0",
  },
}
`;

exports[`report snapshots > formats stable JUnit 1`] = `
"<?xml version="1.0" encoding="UTF-8"?><testsuite name="boardreadyops" tests="1" failures="1" timestamp="2026-05-18T00:00:00.000Z"><testcase classname="bom.missing-mpn" name="bom.csv:2:1" file="bom.csv" id="6b8bae8b505e"><failure message="R1 is missing an MPN.">{&quot;reference&quot;:&quot;R1&quot;,&quot;fingerprint&quot;:&quot;6b8bae8b505e9461a9c3b8df7fb0e0f7daa70750a14eb6fd1c74144431e31b8f&quot;,&quot;location&quot;:&quot;bom.csv:2:1&quot;,&quot;help&quot;:&quot;See the BoardReadyOps rule documentation for remediation guidance.&quot;}</failure></testcase></testsuite>
"
`;

exports[`report snapshots > formats stable Markdown 1`] = `
"<!-- boardreadyops:sticky:v1 -->
# BoardReadyOps Report

| Metric | Count |
| --- | ---: |
| Total | 1 |
| Critical | 0 |
| High | 1 |
| Medium | 0 |
| Low | 0 |
| Info | 0 |

## Top Findings

- **high** \`bom.missing-mpn\` in \`bom.csv:2:1\` (\`6b8bae8b505e\`): R1 is missing an MPN.


"
`;

exports[`report snapshots > formats stable SARIF 1`] = `
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "runs": [
    {
      "results": [
        {
          "level": "error",
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "bom.csv",
                },
                "region": {
                  "startColumn": 1,
                  "startLine": 2,
                },
              },
            },
          ],
          "message": {
            "text": "R1 is missing an MPN.",
          },
          "partialFingerprints": {
            "primaryLocationLineHash": "6b8bae8b505e9461a9c3b8df7fb0e0f7daa70750a14eb6fd1c74144431e31b8f",
          },
          "properties": {
            "details": {
              "reference": "R1",
            },
            "fingerprint": "6b8bae8b505e9461a9c3b8df7fb0e0f7daa70750a14eb6fd1c74144431e31b8f",
            "help": "See the BoardReadyOps rule documentation for remediation guidance.",
            "reportLocation": "bom.csv:2:1",
            "resourceKind": "bom",
            "severity": "high",
            "stableId": "6b8bae8b505e",
          },
          "ruleId": "bom.missing-mpn",
        },
      ],
      "tool": {
        "driver": {
          "informationUri": "https://github.com/oaslananka/boardreadyops",
          "name": "BoardReadyOps",
          "rules": [
            {
              "defaultConfiguration": {
                "level": "error",
              },
              "fullDescription": {
                "text": "R1 is missing an MPN.",
              },
              "helpUri": "https://github.com/oaslananka/boardreadyops/tree/main/docs/rules",
              "id": "bom.missing-mpn",
              "name": "bom.missing-mpn",
              "shortDescription": {
                "text": "bom.missing-mpn",
              },
            },
          ],
          "version": "0.9.0",
        },
      },
    },
  ],
  "version": "2.1.0",
}
`;
